--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -1,5 +1,5 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     letter-spacing: -.022em;
     font-synthesis: none;
@@ -8,11 +8,104 @@ body {
     -moz-osx-font-smoothing: grayscale;
     color: #333;
     line-height: 1.5em;
-    padding: 25px;
+    padding: 25px;*/
+    
+    background-color: white;
+    
 }
 
 img {
     max-width: 100%; /* Afbeeldingen responsive maken */
 }
 
-/* Voeg jouw css hieraan toe */
+.knopbetaalpagina{
+    font-family: "Rockwell";
+    font-size: 15px;
+    border-radius: 8px;
+    background-color: white;
+    color: rgb(206,78,99);
+    border-color: white;
+    width: 100px;
+    height: 35px;
+    
+    
+}
+
+.knopbetaalpagina:hover{
+    background-color: rgb(206,78,99);
+    color: white;
+
+}
+
+.knopbooking{
+    font-family: "Betty Noir";
+    color: rgb(206,78,99);
+    background-color: transparent;
+    border: 1px solid rgb(206,78,99);
+    padding: 5px;
+}
+
+.knopbooking:hover{
+    background-color:rgb(206,78,99);
+    color: white;
+    
+}
+
+.knopnavigatie{
+    background-color:transparent;
+    border: 0px;
+}
+
+
+h1{
+    font-family: "Betty Noir"
+}
+    
+div{
+    color: black;
+    
+        
+    }
+.boxwit{
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border: 3px black solid;
+    margin-right: 20px;
+    
+}
+.boxwit p{
+    margin-top: 5px;
+    text-align: center;
+}
+.boxblack{
+    width: 100px;
+    height: 100px;
+    background-color: black;
+    border: 3px black solid;
+    margin-right: 20px;
+}
+.boxblack p{
+    color: white;
+    margin-top: 5px;
+    text-align: center;
+}
+.boxred{
+    width: 100px;
+    height: 100px;
+    background-color: rgb(206,78,99);
+    border: 3px black solid;
+    margin-right: 20px;
+}
+.boxred p{
+    color: white;
+    margin-top: 5px;
+    text-align: center;
+}
+.kleurenpallet{ 
+    list-style: none;
+}
+
+.Fred{
+    border-radius: 100%;
+}
